# truce-rack

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  surge-xt-screenshot.yml
crates/cargo-rack/: Cargo.toml  README.md
crates/cargo-rack/src/: main.rs
crates/truce-rack/: Cargo.toml  README.md
crates/truce-rack-au/: Cargo.toml  README.md
crates/truce-rack-au/src/: lib.rs
crates/truce-rack-au3/: Cargo.toml  README.md
crates/truce-rack-au3/src/: lib.rs
crates/truce-rack-clap/: Cargo.toml  README.md
crates/truce-rack-clap/src/: lib.rs
crates/truce-rack-core/: Cargo.toml  README.md
crates/truce-rack-core/src/: buffer.rs  bus.rs  editor.rs  error.rs  events.rs  info.rs  lib.rs  plugin.rs  sample.rs  scanner.rs  state.rs  transport.rs  wrapper.rs
crates/truce-rack-lv2/: Cargo.toml  README.md  build.rs
crates/truce-rack-lv2/src/: lib.rs
crates/truce-rack-standalone/: Cargo.toml  README.md
crates/truce-rack-standalone/src/: cli.rs  device.rs  keyboard.rs  lib.rs  menu_macos.rs  midi.rs  midi_queue.rs  screenshot.rs  transport.rs  windowed.rs
crates/truce-rack-test/: Cargo.toml  README.md
crates/truce-rack-test/src/: lib.rs
crates/truce-rack-vst3/: Cargo.toml  README.md
crates/truce-rack-vst3/src/: lib.rs
crates/truce-rack/src/: lib.rs
docs/: quickstart.md
scripts/: bump.sh  release.sh
