[package]
name = "cargo-rack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cargo subcommand that runs the truce-rack standalone plugin host (`cargo rack`)"
readme = "README.md"

[[bin]]
name = "cargo-rack"
path = "src/main.rs"

# Batteries included: enable every format that builds out-of-the-box
# on the host OS, via target-specific dependency features (a flat
# `[features] default` can't vary per platform).
#
# - clap + vst3: pure Rust, every OS.
# - au + au3: Apple only.
# - gui (plugin editor window): macOS + Windows; Linux is excluded
#   because baseview's Linux backend drags in wayland-sys.
# - lv2: opt-in (`--features lv2`) since it links the system `lilv`
#   library, which isn't present by default on any OS.
[dependencies]
truce-rack-standalone = { workspace = true, features = ["clap", "vst3"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
truce-rack-standalone = { workspace = true, features = ["au", "au3", "gui"] }

[target.'cfg(windows)'.dependencies]
truce-rack-standalone = { workspace = true, features = ["gui"] }

[features]
# Opt-in extras on top of the per-OS baseline above.
lv2 = ["truce-rack-standalone/lv2"]
