[package]
name = "truce-rack-au3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AU v3 (App Extension) host implementation for the truce-rack audio-plugin framework"
readme = "README.md"

[dependencies]
truce-rack-core = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
truce-rack-au = { workspace = true }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-audio-toolbox = { version = "0.3", features = [
    "AudioComponent",
    "AUComponent",
] }
objc2-core-foundation = { version = "0.3", features = ["CFBase", "CFString"] }

[lints]
workspace = true
