[package]
name = "truce-rack-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLAP host implementation for the truce-rack audio-plugin framework"

[dependencies]
truce-rack-core = { workspace = true }
clap-sys = { workspace = true }
libloading = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
