[package]
name = "truce-rack-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Assertion helpers for truce-rack host implementations (load, render, state, params)"
readme = "README.md"

[dependencies]
truce-rack-core = { workspace = true }

[lints]
workspace = true
